# ranking

./: .clang-tidy  .gitignore  2016eosmainnh.html  2016lscnh.html  CMakeLists.txt  curl.c  curl.h  makefile  ranking.c  regatta.c  sailor.c  sailor.h
apps/: ranking.c
cmake/modules/: FindPCRE2.cmake
include/: curl.h  easylib.h  regatta.h  sailor.h
src/: curl.c  easylib.c  regatta.c  sailor.c
test/: 2016inlmainnh.html
